Switched to CMake

--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,11 @@
 *~
 .DS_Store
 Thumbs.db
+
+# Common CMake directory names
+/build
+/Release
+/Debug
+
+# Qt Creator creates this
+CMakeLists.txt.user
