WIP: complete test

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -7,3 +7,8 @@ add_executable( paint_test paint_test.cpp )
 target_include_directories(paint_test PUBLIC "${PROJECT_SOURCE_DIR}/src")
 target_link_libraries(paint_test airbrushlib)
 add_test( NAME paint COMMAND paint_test )
+
+add_executable( complete_test complete_test.cpp )
+target_include_directories(complete_test PUBLIC "${PROJECT_SOURCE_DIR}/src")
+target_link_libraries(complete_test airbrushlib)
+add_test( NAME complete COMMAND complete_test )
